--- a/WebContent/hotel.form.cliente.logado.xhtml
+++ b/WebContent/hotel.form.cliente.logado.xhtml
@@ -38,7 +38,7 @@
         	<p:breadCrumb style="margin-bottom:10px; background:#FFE4E1">
 				<p:menuitem value="Categories" url="#" />
 				<p:menuitem value="Cadastrar-se" url="#" />
-    			<p:menuitem value="Reservar Quarto" url="./hotel.reservar.quarto.xhtml" />
+    			<p:menuitem value="Reservar Quarto" url="./hotel.form.reservar.quarto.xhtml" />
     			<p:menuitem value="Estadia" url="#" />
     			<p:menuitem value="Solicitar Serviço" url="#" />
  			</p:breadCrumb>
