--- a/WebContent/hotel.form.index.xhtml
+++ b/WebContent/hotel.form.index.xhtml
@@ -11,17 +11,17 @@
 </h:head>
 
 <h:body>
-
-	   	<div>
-		<ui:insert name="title">
-			<ui:include src="/pattern/title.xhtml" />
-		</ui:insert>
+	<h:form>
+	
+	<!-- CABECALHO DO SITE (titulo com o nome do hotel) -->	
+		<div>
+			<ui:insert name="title">
+				<ui:include src="/pattern/title.xhtml" />
+			</ui:insert>
 		</div>
 		
-	<h:form>
-        <p:growl id="panelOne" showDetail="true" />	
-			<p:panel id="menu_principal" header="Menu Principal" widgetVar="panelOne" 
-						style="margin-bottom:5px; font-size:16px; background:#CDC0B0">
+        <p:growl id="painelMenuPrincipal" showDetail="true" />	
+			<p:panel id="menu_principal" header="Menu Principal" widgetVar="panelOne" style="margin-bottom:5px; font-size:16px; background:#CDC0B0">
 			<h:panelGrid columns="1" cellpadding="5" >    
 			
         	<p:breadCrumb style="margin-bottom:10px; background:#FFFFF0">
@@ -35,8 +35,9 @@
 			</h:panelGrid>
         	</p:panel>	
  		
- 		<p:growl id="panelTwo" showDetail="true" />
- 		<p:panel widgetVar="panelTwo" style="background:#CDC0B0">
+ 	<!-- AREA DE DESTAQUES DO HOTEL -->
+ 		<p:growl id="painelDestaques" showDetail="true" />
+ 		<p:panel widgetVar="painelDestaques" style="background:#CDC0B0">
 			<div align="center">
 	    	<p><h:outputText style="text-align:center; margin-bottom:10px; helvetica; font-size:18px; color:#000000" 
 	    				value="O Hotel Paulista Conforto tem uma área dedicada ao relaxamento e interatividade dos hóspedes que procuram
@@ -44,27 +45,15 @@
 		
     <p:carousel numVisible="1" effect="easeInStrong" headerText="Serviços" style="margin-bottom:px; helvetica; font-size:16px; background-color:#8B7765" 
     			circular="true" autoPlayInterval="3200" responsive="true" pageLinks="4">
-        <p:tab title="Academia"  style="background-color:#8B7765">
-            <h:panelGrid columns="2" cellpadding="10" >
-                <p:graphicImage value="/img/academia.jpeg" width="400px" height="300px" />
-                <h:outputText value="Academia com espaço amplo, organizado e equipamentos modernos." />
-            </h:panelGrid>
-        </p:tab>
-        <p:tab title="Quadra">
+    	<p:tab title="Wifi" >
             <h:panelGrid columns="2" cellpadding="10">
-                <p:graphicImage value="/img/esportetenis.jpg" width="400px" height="300px"/>
-                <h:outputText value="Quadra de Squash com piso de madeira (verificar horário disponível)." />
-            </h:panelGrid>
-        </p:tab>
-        <p:tab title="Wifi" >
-            <h:panelGrid columns="2" cellpadding="10">
-                <p:graphicImage value="/img/freewifi.jpg" width="400px" height="300px" />
+                <p:graphicImage value="/img/freewifi.jpg" width="400px" height="300px" title="Wifi Free"/>
                 <h:outputText value="Wi-Fi livre em todas as comodidades do hotel, a partir do hall de entrada e nos quartos reservados pelos hóspedes." />
             </h:panelGrid>
         </p:tab>
         <p:tab title="Restaurante">
             <h:panelGrid columns="2" cellpadding="10">
-                <p:graphicImage value="/img/restaurante.jpg" width="400px" height="300px" />
+                <p:graphicImage value="/img/restaurante.jpg" width="400px" height="300px" title="Restaurante"/>
                  <h:panelGrid columns="1" cellpadding="10">
                 <h:outputText value="Na cidade da gastronomia nosso restaurante tem um delicioso e variado cardápio de comida internacional. Nosso restaurante sempre 
                 					agrada aos paladares de seus clientes." />
@@ -73,15 +62,27 @@
 			</h:panelGrid>
             </h:panelGrid>
         </p:tab>
+        <p:tab title="Academia"  style="background-color:#8B7765">
+            <h:panelGrid columns="2" cellpadding="10" >
+                <p:graphicImage value="/img/academia.jpeg" width="400px" height="300px" title="Academia"/>
+                <h:outputText value="Academia com espaço amplo, organizado e equipamentos modernos." />
+            </h:panelGrid>
+        </p:tab>
+        <p:tab title="Quadra Squash">
+            <h:panelGrid columns="2" cellpadding="10">
+                <p:graphicImage value="/img/esportetenis.jpg" width="400px" height="300px" title="Squash"/>
+                <h:outputText value="Quadra de Squash com piso de madeira (verificar horário disponível)." />
+            </h:panelGrid>
+        </p:tab>
     </p:carousel>
 	   </p:panel>
 	   
+	<!-- RODAPE -->
 	   	<div>
 		<ui:insert name="footer">
 			<ui:include src="/pattern/footer.xhtml" />
 		</ui:insert>
 		</div>
-
 
 	</h:form>
 
