--- a/WebContent/hotel.form.reservar.quarto.xhtml
+++ b/WebContent/hotel.form.reservar.quarto.xhtml
@@ -2,56 +2,45 @@
 <html 	xmlns="http://www.w3.org/1999/xhtml"
     	xmlns:h="http://java.sun.com/jsf/html"
     	xmlns:f="http://java.sun.com/jsf/core"
-    	xmlns:p="http://primefaces.org/ui">
+    	xmlns:p="http://primefaces.org/ui"
+    	xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<link rel="stylesheet" type="text/css" href="css/estilo.css" />
-	<title>Hotel Paulista Conforto</title>
+	<title>Reserva de Quarto</title>
 </h:head>
 
 <h:body>
-
-<div align="center">
-<h1>Hotel Paulista Conforto</h1>
-</div>
-
 	<h:form>
-
-		<p:growl id="panelOne" showDetail="true" />	
-		<p:panel id="sistema_hotel" header="Hotel Paulista - Login" toggleable="true" closable="true" toggleSpeed="500"
-					closeSpeed="500" widgetVar="panelOne" style="margin-bottom:20px; background:#F5F5F5; font-size:16px" >
- 
-        <p:ajax event="close" listener="#{headerMB.onFechar}" update="panelOne" />
-        <p:ajax event="toggle" listener="#{headerMB.onMinimizar}" update="panelOne" />
- 
-        <h:panelGrid columns="3" cellpadding="10">
-        	<p:outputLabel value="Bem vindo(a), " /> <p:outputLabel value="#{loginMB.usuario.nome}"  />
-        	<p:commandButton style="font-size:15px" value="Sair"/>
-        </h:panelGrid>
-        </p:panel>
-
-        <p:growl id="panelTwo" showDetail="true" />	
-			<p:panel id="menu_principal" header="Menu Principal" widgetVar="panelTwo" 
-						style="margin-bottom:5px; font-size:16px; background:#F5F5F5;">
-			<h:panelGrid columns="1" cellpadding="5">
-			   	
-        	<p:breadCrumb style="margin-bottom:10px; background:#FFE4E1">
-				<p:menuitem value="Categories" url="#" />
-				<p:menuitem value="Cadastrar-se" url="#" />
-    			<p:menuitem value="Reservar Quarto" url="./hotel.form.reservar.quarto.xhtml" />
-    			<p:menuitem value="Estadia" url="#" />
-    			<p:menuitem value="Solicitar Serviço" url="#" />
- 			</p:breadCrumb>
- 			
-			</h:panelGrid>
-        	</p:panel>	
+	
+	<!-- CABECALHO DO SITE (titulo com o nome do hotel) -->	
+		<div>
+			<ui:insert name="title">
+				<ui:include src="/pattern/title.xhtml" />
+			</ui:insert>
+		</div>
+		
+	<!-- PAINEL DE LOGIN  -->	
+		<div>
+			<ui:insert name="headerLogin">
+				<ui:include src="/pattern/headerLogin.xhtml" />
+			</ui:insert>
+		</div>
+	
+	<!-- PAINEL DO MENU PRINCIPAL -->
+		<div>
+			<ui:insert name="menuPrincipal">
+				<ui:include src="/pattern/menuPrincipal.xhtml" />
+			</ui:insert>
+		</div>
  		
+ 	<!-- FORM DOS DADOS PARA RESERVA -->	
  		<p:growl id="panelTree" showDetail="true" />
- 		<p:panel widgetVar="panelTree" >
+ 		<p:panel widgetVar="panelTree" style="background:#CDC0B0" >
+ 		
 	    	<p:growl id="msgs" showDetail="true" />
- 
   				<p:panel id="basic" header="Reservar Quarto" footer="Hotel Paulista Conforto - Reserva de Quarto" 
-  							style="margin-bottom:20px; font-size:16px">
+  							style="margin-bottom:20px; font-size:16px; background:#FFFFF0">
         			<h:panelGrid columns="2" cellpadding="10">
         				<p:outputLabel value="Check-in:" />
         				<p:calendar id="calCheckIn" pattern="dd/MM/yyyy" navigator="true" mask="true" 
@@ -82,6 +71,13 @@
    				 </p:panel>
 
 	    </p:panel>
+		
+	<!-- RODAPE -->
+		<div>
+			<ui:insert name="footer">
+				<ui:include src="/pattern/footer.xhtml" />
+			</ui:insert>
+		</div>
 		
 	</h:form>
 
