--- a/WebContent/hotel.form.reservar.quarto.xhtml
+++ b/WebContent/hotel.form.reservar.quarto.xhtml
@@ -7,7 +7,7 @@
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 	<link rel="stylesheet" type="text/css" href="css/estilo.css" />
-	<title>Reserva de Quarto</title>
+	<title>Reserva de Quarto | Hotel Paulista Conforto</title>
 </h:head>
 
 <h:body>
@@ -39,8 +39,8 @@
  		<p:panel widgetVar="panelTree" style="background:#CDC0B0" >
  		
 	    	<p:growl id="msgs" showDetail="true" />
-  				<p:panel id="basic" header="Reservar Quarto" footer="Hotel Paulista Conforto - Reserva de Quarto" 
-  							style="margin-bottom:20px; font-size:16px; background:#FFFFF0">
+  				<p:panel id="reservarQuarto" header="Reservar Quarto" footer="Hotel Paulista Conforto - Reserva de Quarto" 
+  							style="margin-bottom:20px; font-size:16px; background:#FFFFF0; font-family: Trebuchet MS">
         			<h:panelGrid columns="2" cellpadding="10">
         				<p:outputLabel value="Check-in:" />
         				<p:calendar id="calCheckIn" pattern="dd/MM/yyyy" navigator="true" mask="true" 
