--- a/WebContent/pattern/headerLogin.xhtml
+++ b/WebContent/pattern/headerLogin.xhtml
@@ -14,9 +14,9 @@
 		
 		<div class="headerLogin">
 			<p:growl id="panelOne" showDetail="true" />	
-				<p:panel id="header_login" header="Login" style="background:#CDC0B0" >
+				<p:panel id="header_login" header="Login" style="background:#CDC0B0; font-family: Trebuchet MS; font-size:16px" >
         			<h:panelGrid columns="3" cellpadding="10">
-        				<p:outputLabel style="color:#000000" value="Bem vindo(a), " /> <p:outputLabel value="#{loginMB.usuario.nome}"  />
+        				<p:outputLabel style="color:#000000" value="Bem vindo(a)" />
         				<p:commandButton style="font-size:15px" value="Sair"/>
        				</h:panelGrid>
        			</p:panel>	
