--- a/WebContent/pattern/footer.xhtml
+++ b/WebContent/pattern/footer.xhtml
@@ -21,7 +21,7 @@
 		
 		<div class="ui-g">
     		<div class="ui-g-12 ui-md-6 ui-lg-4">
-    			<p:graphicImage value="/img/tel.png" width="50px" height="50px" />
+    			<p:graphicImage value="/img/telefone.png" width="50px" height="50px" />
     			<p><h:outputText value="+55 (11) 3000-0003" /></p>
     		</div>
     		<div class="ui-g-12 ui-md-6 ui-lg-4">
