--- a/WebContent/pattern/title.xhtml
+++ b/WebContent/pattern/title.xhtml
@@ -11,7 +11,7 @@
 <h:body>
 
 	<div align="center">
-		<h1 style="color:#FFDAB9">Hotel Paulista Conforto</h1>
+		<h1 style="color:#FFDAB9; font-variant: small-caps;">Hotel Paulista Conforto</h1>
 		<h4 style="color: #FFEFD5">Bem vindo ao site do Hotel Paulista.</h4>
 		<!-- border: 5px solid #CFCFCF; -->
 	</div>
