--- a/WebContent/pattern/footer.xhtml
+++ b/WebContent/pattern/footer.xhtml
@@ -26,7 +26,7 @@
     		</div>
     		<div class="ui-g-12 ui-md-6 ui-lg-4">
 				<p:graphicImage value="/img/localiza.png" width="50px" height="50px" />
-				<p><h:outputText cellpadding="0" value="Avenida Paulista, 3000" /></p>
+				<p><h:outputText cellpadding="0" value="Alameda Jaú, 3000" /></p>
 				<p><h:outputText cellpadding="1" value="São Paulo, SP, Brasil" /> </p>
 			</div>
    			<div class="ui-g-12 ui-lg-4">
