--- a/WebContent/pattern/menuPrincipal.xhtml
+++ b/WebContent/pattern/menuPrincipal.xhtml
@@ -15,15 +15,16 @@
 		<p:growl id="painelMenuPrincipal" showDetail="true" />	
 	   	<div class="menuPrincipal">
 			<p:panel id="menu_principal" header="Menu Principal" widgetVar="painelMenuPrincipal" style="margin-bottom:5px; font-size:16px; 
-						background:#CDC0B0; font-family: Trebuchet MS"> 
+						background:#CDC0B0"> 
 			<h:panelGrid columns="1" cellpadding="5" >    
 		
-        	<p:breadCrumb style="margin-bottom:10px; background:#FFFFF0; font-family: Trebuchet MS">
+        	<p:breadCrumb style="margin-bottom:10px; background:#FFFFF0">
 				<p:menuitem value="Categories" url="/hotel.form.index.xhtml" />
 				<p:menuitem value="Cadastrar-se" url="/hotel.form.cadastro.xhtml" />
-				<p:menuitem value="Login" url="#" />
+				<p:menuitem value="Login" url="/hotel.form.login.xhtml" />
     			<p:menuitem value="Sobre o hotel" url="/hotel.form.sobre.hotel.xhtml" />
     			<p:menuitem value="Reservar Quarto" url="/hotel.form.reservar.quarto.xhtml" />
+    			<p:menuitem value="Contatos" url="/hotel.form.contato.xhtml" />
  			</p:breadCrumb>
 			</h:panelGrid>
         	</p:panel>	
