--- a/WebContent/pattern/headerLogin.xhtml
+++ b/WebContent/pattern/headerLogin.xhtml
@@ -14,10 +14,13 @@
 		
 		<div class="headerLogin">
 			<p:growl id="panelOne" showDetail="true" />	
-				<p:panel id="header_login" header="Login" style="background:#CDC0B0; font-family: Trebuchet MS; font-size:16px" >
-        			<h:panelGrid columns="3" cellpadding="10">
-        				<p:outputLabel style="color:#000000" value="Bem vindo(a)" />
-        				<p:commandButton style="font-size:15px" value="Sair"/>
+				<p:panel id="header_login" header="Login" style="background:#CDC0B0; font-size:16px" >
+        			<h:panelGrid columns="5" cellpadding="10">
+        				<p:outputLabel style="color:#000000" value="Login:" />
+        				<p:inputText tabindex="1"/>
+        				<p:outputLabel style="color:#000000" value="Senha:" />
+        				<p:password id="inputPassword" tabindex="2"/>
+        				<p:commandButton style="font-size:15px" value="Entrar" tabindex="3"/>
        				</h:panelGrid>
        			</p:panel>	
 		</div>	
