--- a/WebContent/hotel.form.cadastro.xhtml
+++ b/WebContent/hotel.form.cadastro.xhtml
@@ -33,7 +33,7 @@
  		
 	    	<p:growl id="msgs" showDetail="true" />
   				<p:panel id="cadastroHospede" header="Cadastrar Hóspede" footer="Hotel Paulista Conforto - Cadastro de hóspede" 
-  							style="margin-bottom:20px; font-size:16px; background:#FFFFF0; font-family: Trebuchet MS">
+  							style="margin-bottom:20px; font-size:16px; background:#FFFFF0">
   												
         			<h:panelGrid columns="4" cellpadding="10">
         				<p:outputLabel value="*Nome:"/>
