--- a/WebContent/pattern/headerLogin.xhtml
+++ b/WebContent/pattern/headerLogin.xhtml
@@ -20,7 +20,7 @@
         				<p:inputText tabindex="1"/>
         				<p:outputLabel style="color:#000000" value="Senha:" />
         				<p:password id="inputPassword" tabindex="2"/>
-        				<p:commandButton style="font-size:15px" value="Entrar" tabindex="3"/>
+        				<p:commandButton style="font-size:15px" value="Entrar" icon="ui-icon-check" tabindex="3"/>
        				</h:panelGrid>
        			</p:panel>	
 		</div>	
