--- a/WebContent/hotel.form.sobre.hotel.xhtml
+++ b/WebContent/hotel.form.sobre.hotel.xhtml
@@ -44,10 +44,10 @@
 				            </div>
 				 
 				            <div class="ui-g">
-				                <div class="ui-g-6 ui-md-3"><p:graphicImage value="/img/imglogin1.jpg" style="width:100%; height:100%;" /></div>  
-				                <div class="ui-g-6 ui-md-3"><p:graphicImage value="/img/imglogin2.jpg" style="width:100%; height:100%;" /></div> 
-				                <div class="ui-g-6 ui-md-3"><p:graphicImage value="/img/imglogin3.jpg" style="width:100%; height:100%;" /></div>    
-				                <div class="ui-g-6 ui-md-3"><p:graphicImage value="/img/imglogin4.jpg" style="width:100%; height:100%;" /></div>
+				                <div class="ui-g-6 ui-md-3"><p:graphicImage value="/img/imglogin1.jpg" style="width:100%" /></div>  
+				                <div class="ui-g-6 ui-md-3"><p:graphicImage value="/img/imglogin2.jpg" style="width:100%" /></div> 
+				                <div class="ui-g-6 ui-md-3"><p:graphicImage value="/img/imglogin3.jpg" style="width:100%" /></div>    
+				                <div class="ui-g-6 ui-md-3"><p:graphicImage value="/img/imglogin4.jpg" style="width:100%" /></div>
 				            </div>
 				 
 				            <div class="ui-g">
