--- a/WebContent/pattern/menuPrincipal.xhtml
+++ b/WebContent/pattern/menuPrincipal.xhtml
@@ -19,12 +19,12 @@
 			<h:panelGrid columns="1" cellpadding="5" >    
 		
         	<p:breadCrumb style="margin-bottom:10px; background:#FFFFF0">
-				<p:menuitem value="Categories" url="/hotel.form.index.xhtml" />
-				<p:menuitem value="Cadastrar-se" url="/hotel.form.cadastro.xhtml" />
-				<p:menuitem value="Login" url="/hotel.form.login.xhtml" />
-    			<p:menuitem value="Sobre o hotel" url="/hotel.form.sobre.hotel.xhtml" />
-    			<p:menuitem value="Reservar Quarto" url="/hotel.form.reservar.quarto.xhtml" />
-    			<p:menuitem value="Contatos" url="/hotel.form.contato.xhtml" />
+				<p:menuitem value="Categories" url="/index.xhtml" />
+				<p:menuitem value="Cadastrar-se" url="/cadastro.xhtml" />
+				<p:menuitem value="Login" url="/login.xhtml" />
+    			<p:menuitem value="Sobre o hotel" url="/sobre_hotel.xhtml" />
+    			<p:menuitem value="Reservar Quarto" url="/reservar_quarto.xhtml" />
+    			<p:menuitem value="Contatos" url="/contatos.xhtml" />
  			</p:breadCrumb>
 			</h:panelGrid>
         	</p:panel>	
